# SpaceGame

./: .gitignore  CMakeLists.txt
Data/: staticText.txt
Source/: main.cpp
Source/Game/: Constants.h  FunctionsLibrary.h  Game.cpp  Game.h  GameSystemsManager.h  GameplayStatics.h  SystemsManager.h  SystemsRegistry.h  Utils.h  World.h
Source/Game/Components/: CameraComponent.h  GameStateComponent.h  InputComponent.h  MovementComponent.h  OutOfWorldBoundsComponent.h  RenderComponent.h  SpriteComponent.h  TransformComponent.h  UIRenderComponent.h  WidgetComponent.h
Source/Game/ECS/: SystemsManager.h  World.h
Source/Game/ECS/Components/: GameObjectComponent.h  RenderComponent.h  UIComponent.h  WidgetAnimationComponent.h
Source/Game/ECS/Systems/: InputSystem.cpp  MenuSystem.cpp  MenuSystem.h  MovementSystem.cpp  RandomSystem.cpp  RandomSystem.h  RenderSystem.cpp  RenderSystem.h  ViewportSystem.h  WorldBoundsSystem.cpp
Source/Game/ECS/Systems/Data/: DataSystem.cpp  DataSystem.h  FileHandler.cpp  FileHandler.h  TextureInfo.h
Source/Game/ECS/Systems/Data/Handlers/: ParametersHandler.cpp  ParametersHandler.h  TextDataHandler.cpp  TextDataHandler.h  TextureDataHandler.cpp  TextureDataHandler.h
Source/Game/ECS/Systems/Input/: Input.cpp  InputSystem.cpp
Source/Game/ECS/Types/: Exceptions.h  TypesList.h
Source/Game/Systems/: DataSystem.cpp  DataSystem.h  DatabaseSystem.cpp  DatabaseSystem.h  GameplaySystem.cpp  GameplaySystem.h  InputSystem.cpp  InputSystem.h  MenuSystem.cpp  MenuSystem.h  MovementSystem.cpp  MovementSystem.h  RandomSystem.cpp  RandomSystem.h  RenderSystem.cpp  RenderSystem.h  ResourcesSystem.cpp  ResourcesSystem.h  TextSystem.cpp  TextSystem.h  ViewportSystem.cpp  ViewportSystem.h  WorldBoundsSystem.cpp  WorldBoundsSystem.h
Source/Game/Systems/Core/: InputSystem.cpp  RenderSystem.cpp  RenderSystem.h
Source/Game/Types/: Component.h  ComponentRemoveCallback.h  ComponentRemoveHandler.h  DataDescriptor.h  Entity.h  Exceptions.h  FileHandler.cpp  FileHandler.h  Input.cpp  Input.h  RenderData.h  System.h  Texture.h  TextureInfo.h  Widget.cpp  Widget.h
Tools/: binarize_text.py  binarize_textures.py  create_new.py  data.py  gen_sln.py  update_registry.py
Tools/CMake/: FetchContent.cmake  GroupSourcesByFolder.cmake  Imgui.cmake  ServerConfig.cmake
Tools/py_impl/: impl.py
Tools/templates/: BlobTemplate.h  ComponentTemplate.h  ComponentsInfoTemplate.h  ComponentsRegistryTemplate.h  EnumTemplate.h  GameSystemsRegistryTemplate.h  SystemTemplate.cpp  SystemTemplate.h  SystemsRegistryTemplate.h
py_tools/binarize_data/: __init__.py  __main__.py  _binarizer.py  _data_types.py  _utils.py
py_tools/create_new/: __main__.py  _create.py
py_tools/gen_sln/: __main__.py
py_tools/update_registry/: __init__.py  __main__.py  _update.py
